--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </p>
                     <br>
                     <p>
-                        UI tools
+                        UI Testing Automation tools
                     </p>
                     <a target="_blank" rel="noopener noreferrer">
                         <a> <img src="img/Postman.png" height="50" alt="">
@@ -81,7 +81,7 @@
                             <img src="img/Jira.svg" height="50">
                             <br>
                             <p>
-                                REST API tools
+                                REST API Testing Automation tools
                             </p>
                             <a target="_blank" rel="noopener noreferrer">
                                 <img src="img/Java.svg" height="50">
@@ -211,25 +211,29 @@
                             <h4>
                                 <i class="fas fa-envelope"></i> E-mail
                             </h4>
-                            <span>shingelevich@gmail.com</span>
+
+                            <span> <a href="mailto:shingelevich@gmail.com"> </a>shingelevich@gmail.com</span>
+
                         </li>
                         <li>
                             <h4>
                                 <i class="fas fa-globe"></i> Website
                             </h4>
-                            <span><a href="#">qashingelevich.com</a></span>
+                            <span><a href="http://qashingelevich.com">qashingelevich.com</a></span>
                         </li>
                     </ul>
                 </div>
             </section>
 
             <div class="social-links">
-                <a href="#">
+                <a href="https://github.com/IgorShingelevich/">
                     <i class="fab fa-github-square fa-2x"></i>
                 </a>
                 <a href="#">
                     <i class="fab fa-linkedin fa-2x"></i>
                 </a>
+                <i class="fab fa-telegram fa-2x" ></i>
+
             </div>
         </div>
 
