--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="editor" content="Igor Shingelevich">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <meta content="Igor Shingelevich" name="editor">
 
-    <link rel="icon" type="image/x-icon" href="fav_01.ico">
+    <link href="fav_01.ico" rel="icon" type="image/x-icon">
 
     <title>QA Automation CV</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/84affb6238.js" crossorigin="anonymous"></script>
+    <link href="style.css" rel="stylesheet">
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/84affb6238.js"></script>
 </head>
 <body>
 <header>
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="left-panel">
             <div class="profile-img-wrapper">
-                <img src="img/photo-placeholder.png" alt="">
+                <img alt="" src="resources/img/photo-placeholder.png">
             </div>
 
             <section>
@@ -41,205 +41,119 @@
                     <p>
                         UI Testing Automation tools
                     </p>
-                    <a target="_blank" rel="noopener noreferrer">
-                        <a> <img src="img/Postman.png" height="50" alt="">
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer">
-                            <img src="img/Charles.png" height="50">
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer">
-                            <img src="img/Java.svg" height="50">
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer">
-                            <img src="img/Gradle.svg" height="50">
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer">
-                            <img src="img/Intelij_IDEA.svg" height="50">
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer">
-                            <img src="img/Selenide.svg" height="50">
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer">
-                            <img src="img/Docker.svg" height="50">
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer">
-                            <img src="img/JUnit5.svg" height="50">
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer">
-                            <img src="img/Jenkins.svg" height="50">
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer">
-                            <img src="img/Github.svg" height="50">
-                        </a>
-                        <a target="_blank" rel="noopener [noreferrer">
-                            <img src="img/Allure_Report.svg" height="50">
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer">
-                            <img src="img/Allure_EE.svg" height="50">
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer">
-                            <img src="img/Telegram.svg" height="50">
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer">
-                            <img src="img/Jira.svg" height="50">
-                            <br>
-                            <p>
-                                REST API Testing Automation tools
-                            </p>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Java.svg" height="50">
-                            </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Gradle.svg" height="50">
-                            </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Rest-Assured.svg" height="50">
-                            </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Intelij_IDEA.svg" height="50">
-                            </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Docker.svg" height="50">
-                            </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/JUnit5.svg" height="50">
-                            </a> <a target="_blank" rel="noopener noreferrer">
-                            <img src="img/Jenkins.svg" height="50">
-                        </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Github.svg" height="50">
-                            </a>
-                            <a target="_blank" rel="noopener [noreferrer">
-                                <img src="img/Allure_Report.svg" height="50">
-                            </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Allure_EE.svg" height="50">
-                            </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Telegram.svg" height="50">
 
-                                <br>
-                                <p>
-                                    Mobile Testing Automation tools
-                                </p>
-                                <a target="_blank" rel="noopener noreferrer">
-                                    <img src="img/Java.svg" height="50">
-                                </a>
-                                <a target="_blank" rel="noopener noreferrer">
-                                    <img src="img/Gradle.svg" height="50">
-                                </a>
-                                <a target="_blank" rel="noopener noreferrer">
-                                    <img src="img/Intelij_IDEA.svg" height="50">
-                                </a>
-                                <a target="_blank" rel="noopener noreferrer">
-                                    <img src="img/Selenide.svg" height="50">
-                                </a>
-                                <a target="_blank" rel="noopener noreferrer">
-                                    <img src="img/Docker.svg" height="50">
-                                </a>
-                                <a target="_blank" rel="noopener noreferrer">
-                                    <img src="img/JUnit5.svg" height="50">
-                                </a>
-                                <a target="_blank" rel="noopener noreferrer">
-                                    <img src="img/Jenkins.svg" height="50">
-                                </a>
-                                <a target="_blank" rel="noopener [noreferrer">
-                                    <img src="img/Allure_Report.svg" height="50">
-                                </a> <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Allure_EE.svg" height="50">
-                            </a> <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Appium.svg" height="50">
-                            </a>
-                            </a> <a target="_blank" rel="noopener noreferrer">
-                            <img src="img/iosandr.png" height="50">
-
-
-                            <br>
-                            <p>
-                                Functional Testing tools
-                            </p>
-
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Charles.png" height="50">
-                            </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Postman.png" height="50">
-                            </a><a target="_blank" rel="noopener noreferrer">
-                            <img src="img/Browserstack.svg" height="50">
-                        </a><a target="_blank" rel="noopener noreferrer">
-                            <img src="img/Datagrip.png" height="50">
-                        </a><a target="_blank" rel="noopener noreferrer">
-                            <img src="img/Github.svg" height="50">
+                    <!--<a rel="noopener noreferrer" target="_blank">
+                        <img height="50" src="img/Charles.png">
+                    </a>-->
+                    <a rel="noopener noreferrer" target="_blank">
+                        <img height="50" src="resources/img/Java.svg">
+                    </a>
+                    <a rel="noopener noreferrer" target="_blank">
+                        <img height="50" src="resources/img/Gradle.svg">
+                    </a>
+                    <a rel="noopener noreferrer" target="_blank">
+                        <img height="50" src="resources/img/Intelij_IDEA.svg">
+                    </a>
+                    <a rel="noopener noreferrer" target="_blank">
+                        <img height="50" src="resources/img/Selenide.svg">
+                    </a>
+                    <a rel="noopener noreferrer" target="_blank">
+                        <img height="50" src="resources/img/Docker.svg">
+                    </a>
+                    <a rel="noopener noreferrer" target="_blank">
+                        <img height="50" src="resources/img/JUnit5.svg">
+                    </a>
+                    <a rel="noopener noreferrer" target="_blank">
+                        <img height="50" src="resources/img/Jenkins.svg">
+                    </a>
+                    <a rel="noopener noreferrer" target="_blank">
+                        <img height="50" src="resources/img/Github.svg">
+                    </a>
+                    <a rel="noopener [noreferrer" target="_blank">
+                        <img height="50" src="resources/img/Allure_Report.svg">
+                    </a>
+                    <a rel="noopener noreferrer" target="_blank">
+                        <img height="50" src="resources/img/Allure_EE.svg">
+                    </a>
+                    <a rel="noopener noreferrer" target="_blank">
+                        <img height="50" src="resources/img/Jira.svg">
+                    </a>
+                    <br>
+                    <p>
+                        REST API Testing Automation tools
+                    </p>
+                    <a rel="noopener noreferrer" target="_blank">
+                        <img height="50" src="resources/img/Rest-Assured.svg">
+                    </a>
+                    <a rel="noopener noreferrer" target="_blank">
+                        <a> <img alt="" height="50" src="resources/img/Postman.png">
                         </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/HTMLCSS.png" height="50">
-                            </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/JS.png" height="50">
-                            </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Slack.svg" height="50">
-                            </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Telegram.svg" height="50">
-                            </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Notion.png" height="50">
-                            </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Miro.png" height="50">
-                            </a>
-                            <a target="_blank" rel="noopener noreferrer">
-                                <img src="img/Jira.svg" height="50">
-                            </a>
-
-
+                        <br>
+                        <p>
+                            Functional Testing tools
+                        </p>
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="resources/img/Browserstack.svg">
+                        </a>
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="resources/img/Datagrip.png">
+                        </a>
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="resources/img/HTMLCSS.png">
+                        </a>
+                        <!--
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="img/JS.png">
+                        </a>
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="img/Slack.svg">
+                        </a>-->
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="resources/img/Telegram.svg">
+                        </a>
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="resources/img/Notion.png">
+                        </a>
+                        <a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="resources/img/Miro.png">
+                        </a>
+                        <!--<a rel="noopener noreferrer" target="_blank">
+                            <img height="50" src="img/Jira.svg">
+                        </a>-->
+                    </a>
                 </div>
 
                 <div class="personal-data">
+                   <br>
                     <ul>
                         <li>
                             <h4>
-                                <i class="fas fa-city"></i> City
+                                <i class="fas fa-city"></i> Moscow
+                                <i class="fas fa-phone"></i> +7 985 546 92 39
                             </h4>
-                            <span>Moscow</span>
                         </li>
                         <li>
                             <h4>
-                                <i class="fas fa-phone"></i> Phone
+                                <i class="fas fa-envelope"></i> shingelevich@gmail.com
                             </h4>
-                            <span>+7 985 546 92 39</span>
                         </li>
-                        <li>
-                            <h4>
-                                <i class="fas fa-envelope"></i> E-mail
-                            </h4>
 
-                            <span> <a href="mailto:shingelevich@gmail.com"> </a>shingelevich@gmail.com</span>
-
-                        </li>
                         <li>
                             <h4>
-                                <i class="fas fa-globe"></i> Website
+                                <a href="https://t.me/IgorShingelevich" target="_blank">
+                                    <i class="fab fa-telegram"></i> IgorShingelevich
+                                </a>
                             </h4>
-                            <span><a href="http://qashingelevich.com">qashingelevich.com</a></span>
+                        <li>
+                            <h4>
+                                <i class="fas fa-file-download"></i>
+                                <a download="proposed_file_name" href="path_to_file">Download</a>
+                            </h4>
                         </li>
                     </ul>
                 </div>
             </section>
 
-            <div class="social-links">
-                <a href="https://github.com/IgorShingelevich/">
-                    <i class="fab fa-github-square fa-2x"></i>
-                </a>
-                <a href="#">
-                    <i class="fab fa-linkedin fa-2x"></i>
-                </a>
-                <a href="#">
-                     <i class="fab fa-telegram fa-2x" ></i>
-                </a>
-
-            </div>
         </div>
 
         <div class="right-panel">
@@ -287,22 +201,7 @@
                         </p>
                     </div>
                 </article>
-                <!--<article>
-                    <div class="date">
-                        <h3>2016 - 2018</h3>
-                    </div>
-                    <div class="description">
-                        <h3>ABC Company</h3>
-                        <h4>Javascript Developer</h4>
-                        <p>
-                            Describe your role here. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid
-                            architecto asperiores atque aut, autem blanditiis culpa cumque debitis doloremque ducimus ea
-                            eos ex explicabo ipsa iste itaque libero molestiae qui repudiandae rerum, sapiente sint
-                            tempora, ullam unde ut vero voluptate. Laborum nemo non quaerat saepe ullam. Cupiditate
-                            inventore iusto necessitatibus.
-                        </p>
-                    </div>
-                </article>-->
+
             </section>
 
             <section class="skills">
@@ -348,8 +247,7 @@
 <footer>
 
     <div class="footer">
-        <a href="path_to_file" download="proposed_file_name">Download</a>
-        Edited by: <i>Igor Shingelevich</i>
+        <a download="proposed_file_name" href="path_to_file">Download</a>
     </div>
 </footer>
 </body>
