--- a/index.html
+++ b/index.html
@@ -209,23 +209,15 @@
                 <hr>
                 <article>
                     <ul class="skills-list">
-                        <li>Java</li>
-                        <li>Intelij</li>
                         <li>Gradle</li>
-                        <li>Selenide</li>
-                        <li>Docker</li>
                         <li>Junit5</li>
-                        <li>Jenkins</li>
-                        <li>Github</li>
-                        <li>Allure</li>
+                        <li>Selenide</li>
                         <li>RestAssured</li>
+                        <li>Selenoid</li>
+                        <li>Jenkins</li>
+                        <li>Docker</li>
+                        <li>Allure</li>
                         <li>Postman</li>
-                        <li>Appium</li>
-                        <li>Charles</li>
-                        <li>Notion</li>
-                        <li>Slack</li>
-                        <li>Jira</li>
-                        <li>Miro</li>
                         <li>Browserstack</li>
                     </ul>
                 </article>
@@ -246,9 +238,9 @@
 </main>
 <footer>
 
-    <div class="footer">
-        <a download="proposed_file_name" href="path_to_file">Download</a>
-    </div>
+<!--    <div class="footer">-->
+<!--        <a download="proposed_file_name" href="path_to_file">Download</a>-->
+<!--    </div>-->
 </footer>
 </body>
 </html>
