--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                     <a rel="noopener noreferrer" target="_blank">
                         <img height="50" src="resources/img/Gradle.svg">
                     </a>
-                    <a rel="noopener noreferrer" target="_blank">
+                    <!--<a rel="noopener noreferrer" target="_blank">
                         <img height="50" src="resources/img/Intelij_IDEA.svg">
-                    </a>
+                    </a>-->
                     <a rel="noopener noreferrer" target="_blank">
                         <img height="50" src="resources/img/Selenide.svg">
                     </a>
@@ -75,9 +75,9 @@
                     <a rel="noopener noreferrer" target="_blank">
                         <img height="50" src="resources/img/Allure_EE.svg">
                     </a>
-                    <a rel="noopener noreferrer" target="_blank">
+                    <!--<a rel="noopener noreferrer" target="_blank">
                         <img height="50" src="resources/img/Jira.svg">
-                    </a>
+                    </a>-->
                     <br>
                     <p>
                         REST API Testing Automation tools
@@ -228,8 +228,8 @@
                 <hr>
                 <article>
                     <ul class="languages-list">
-                        <li>Russian - native speaker</li>
-                        <li>English - Fluent</li>
+                        <li>Russian - native</li>
+                        <li>English - fluent</li>
                     </ul>
                 </article>
             </section>
