--- a/index.html
+++ b/index.html
@@ -2,24 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="ie=edge" http-equiv="X-UA-Compatible">
-    <meta content="Igor Shingelevich" name="editor">
 
     <link href="fav_01.ico" rel="icon" type="image/x-icon">
 
-    <title>QA Automation CV</title>
+    <title>QA Shingelevich CV</title>
     <link href="style.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/84affb6238.js"></script>
 </head>
 <body>
 <header>
     <div class="header">
-        <h1>Igor Shingelevich</h1>
-        <h2>QA Engineer</h2>
-        <hr>
+        <div class="header-content">
+            <h1>Igor Shingelevich</h1>
+            <h2>QA Engineer</h2>
+            <hr>
+        </div>
+        <nav class="language-switch">
+            <ul>
+                <li><a href="index.html">ENG</a></li>
+                <li><a href="index_ru.html">RU</a></li>
+            </ul>
+        </nav>
     </div>
 </header>
+
 
 <main>
     <div class="container">
@@ -123,89 +129,95 @@
                     </a>
                 </div>
 
-                <div class="personal-data">
-                   <br>
-                    <ul>
-                        <li>
-                            <h4>
-                                <i class="fas fa-city"></i> Moscow
-                                <i class="fas fa-phone"></i> +7 985 546 92 39
-                            </h4>
-                        </li>
-                        <li>
-                            <h4>
-                                <i class="fas fa-envelope"></i> shingelevich@gmail.com
-                            </h4>
-                        </li>
+<!--                <div class="personal-data">-->
+<!--                    <br>-->
+<!--                    <ul>-->
+<!--                        <li>-->
+<!--                            <h4>-->
+<!--                                <i class="fas fa-city"></i> Moscow-->
+<!--                                <i class="fas fa-phone"></i> +7 985 546 92 39-->
+<!--                            </h4>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <h4>-->
+<!--                                <i class="fas fa-envelope"></i> shingelevich@gmail.com-->
+<!--                            </h4>-->
+<!--                        </li>-->
 
-                        <li>
-                            <h4>
-                                <a href="https://t.me/IgorShingelevich" target="_blank">
-                                    <i class="fab fa-telegram"></i> IgorShingelevich
-                                </a>
-                            </h4>
-                        <li>
-                            <h4>
-                                <i class="fas fa-file-download"></i>
-                                <a download="proposed_file_name" href="path_to_file">Download</a>
-                            </h4>
-                        </li>
-                    </ul>
-                </div>
+<!--                        <li>-->
+<!--                            <h4>-->
+<!--                                <a href="https://t.me/IgorShingelevich" target="_blank">-->
+<!--                                    <i class="fab fa-telegram"></i> IgorShingelevich-->
+<!--                                </a>-->
+<!--                            </h4>-->
+<!--                        <li>-->
+<!--                            <h4>-->
+<!--                                <i class="fas fa-file-download"></i>-->
+<!--                                <a download="proposed_file_name" href="path_to_file">PDF eng</a>-->
+<!--                            </h4>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <h4>-->
+<!--                                <i class="fas fa-file-download"></i>-->
+<!--                                <a download="proposed_file_name" href="path_to_file">PDF ru</a>-->
+<!--                            </h4>-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </div>-->
             </section>
 
         </div>
 
         <div class="right-panel">
             <section class="education">
-                <h2 class="section-title">Education</h2>
+                <h4 class="section-title">Education</h4>
                 <hr>
-                <article>
+                <div class="education-item">
                     <div class="date">
-                        <h3>2022 - 2023</h3>
+                        <h3> <i class="fas fa-calendar-alt"></i> 2021 <i class="fas fa-graduation-cap"></i> QA Guru</h3>
                     </div>
-                    <div class="description">
-                        <h3>QA Guru</h3>
-                        <p>https://qa.guru/</p>
-                        <p>QA Automation Engineer</p>
-                    </div>
-                </article>
-                <article>
+                    <p>QA Automation Engineer</p>
+                </div>
+                <div class="education-item">
                     <div class="date">
-                        <h3>2010 - 2013</h3>
+                        <h3><i class="fas fa-calendar-alt"></i> 2006 - 2013 <i class="fas fa-graduation-cap"></i> South Federal University</h3>
                     </div>
-                    <div class="description">
-                        <h3>South Federal University</h3>
-                        <p>Master Degree in Psychophysiology</p>
-                    </div>
-                </article>
+                    <p>Master Degree in Psychophysiology</p>
+                </div>
             </section>
 
+
             <section class="experience">
-                <h2 class="section-title">Work Experience</h2>
+                <h4 class="section-title">Work Experience</h4>
                 <hr>
                 <article>
-                    <div class="date">
-                        <h3>2022 - now</h3>
-                    </div>
+
                     <div class="description">
-                        <h3>Example Company</h3>
-                        <h4>Functional Tester</h4>
-                        <p>
-                            Over 1+ years of IT Industry experience in Testing and Quality Assurance, and Having
-                            extensive experience in the field of Software Testing with emphasis on Manual Testing,
-                            Automated Testing that includes Functional, Performance, Stress, Usability, Regression,
-                            System Testing of Web based, and GUI based client/server applications using diverse tool set
-                            like Postman, Devtools, Charles, Selenium, Java, Browserstack, Docker, GitHub, TestRail,
-                            Jenkins, JUnit5 and others.
-                        </p>
+
+                        <div class="company">
+                            <h3><i class="fas fa-calendar-alt"></i> 2022 - now <i class="fas fa-building"></i>
+                                Gasworkers</h3>
+                            <h4><i class="fas fa-user"></i> Functional Tester</h4>
+                            <div class="responsibilities">
+                                <ul>
+                                    <li>Designed and implemented a robust automation framework for UI testing using Selenide and Selenoid.</li>
+                                    <li>Created and maintained API tests using RestAssured.</li>
+                                    <li>Integrated Allure reports for clear and insightful test reporting.</li>
+                                    <li>Worked within a CI/CD pipeline, ensuring smooth deployments and high code quality.</li>
+                                    <li>Collaborated with cross-functional teams to ensure thorough testing of new features and bug fixes.</li>
+                                </ul>
+
+                            </div>
+                        </div>
+
+
                     </div>
                 </article>
 
             </section>
 
             <section class="skills">
-                <h2 class="section-title">Skills</h2>
+                <h4 class="section-title">Skills</h4>
                 <hr>
                 <article>
                     <ul class="skills-list">
@@ -237,10 +249,36 @@
     </div>
 </main>
 <footer>
-
-<!--    <div class="footer">-->
-<!--        <a download="proposed_file_name" href="path_to_file">Download</a>-->
-<!--    </div>-->
+    <div class="footer-row">
+        <div class="downloads">
+            <h4><i class="fas fa-file-download"></i> Downloads</h4>
+            <a download="proposed_file_name" href="path_to_file">PDF eng</a>
+            <br>
+            <a download="proposed_file_name" href="path_to_file">PDF ru</a>
+        </div>
+    </div>
+    <div class="footer-row">
+        <div class="social-links">
+            <h4>Social Links</h4>
+            <a href="https://t.me/IgorShingelevich" target="_blank">
+                <i class="fab fa-telegram"></i> IgorShingelevich
+            </a>
+            <br>
+<!--            https://github.com/IgorShingelevich-->
+            <a href="https://github.com/IgorShingelevich" target="_blank">
+                <i class="fab fa-github"></i> IgorShingelevich on GitHub
+            </a>
+        </div>
+    </div>
+    <div class="footer-row">
+        <div class="contacts">
+            <h4>Contact Details</h4>
+            <p><i class="fas fa-city"></i> Moscow<i class="fas fa-phone"></i> +7 985 546 92 39</p>
+<!--            <p><i class="fas fa-phone"></i> +7 985 546 92 39</p>-->
+            <p><i class="fas fa-envelope"></i> shingelevich@gmail.com</p>
+        </div>
+    </div>
 </footer>
+
 </body>
 </html>
